#configure_file( grib_api.cmake.pc.in     grib_api-deprecated.pc     @ONLY )
#configure_file( grib_api_f90.cmake.pc.in grib_api_f90-deprecated.pc @ONLY )

#install(FILES ${CMAKE_CURRENT_BINARY_DIR}/grib_api-deprecated.pc
#              ${CMAKE_CURRENT_BINARY_DIR}/grib_api_f90-deprecated.pc
#        DESTINATION ${INSTALL_LIB_DIR}/pkgconfig)
#
